Fri Jul 19 19:55:28 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (ary_mem_clear): added. This operation doesn't need WB
	  because this operation creates a reference to Qnil.

	* array.c (ary_make_shared, rb_ary_store, rb_ary_shift_m,
	  rb_ary_splice, rb_ary_resize, rb_ary_fill): use ary_mem_clear()
	  instead of rb_mem_clear().

	* array.c (ary_make_shared): use RARRAY_RAWPTR() instead of RARRAY_PTR().

Fri Jul 19 19:18:51 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c: fix commit miss.
	  RGENGC_UNPROTECT_LOGGING should be 0.

Fri Jul 19 19:15:30 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (rb_ary_resurrect): use RARRAY_RAWPTR() because there is no
	  writing.

	* array.c (rb_ary_new_from_values): use ary_memcpy().

Fri Jul 19 19:07:31 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (ary_memcpy): add a function to copy VALUEs into ary
	  with write barrier. If ary is promoted, use write barrier correctly.

	* array.c (rb_ary_cat, rb_ary_unshift_m, rb_ary_dup,
	  rb_ary_sort_bang, rb_ary_replace, rb_ary_plus): use ary_memcpy().

Fri Jul 19 15:32:57 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (rb_ary_store): use RARRAY_PTR_USE() intead of RARRAY_PTR().
	  Clearing memory space doesn't need WBs.

Fri Jul 19 15:19:37 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (ary_ensure_room_for_push): use RARRAY_RAWPTR() instead of
	  RARRAY_PTR. In this code, there are no "write" operation.

	* array.c (rb_ary_equal): ditto.

	* array.c (recursive_equal): ditto.

Fri Jul 19 15:09:22 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c, internal.h (rb_gc_writebarrier_remember_promoted): add a new
	  function to remember an specified object. This api is only
	  experimental (strongly depend on WB/rgengc strategy).

Fri Jul 19 14:56:00 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (ary_unprotect_logging): use (void *) for first parameter
	  because VALUE is not defined before including ruby/ruby.h.

Fri Jul 19 14:19:48 2013  Kazuki Tsujimoto  <kazuki@callcc.net>
